--- a/views/login.jade
+++ b/views/login.jade
@@ -4,11 +4,11 @@ block title
 	title Login Page
 	
 block content
-	form.box(action="map", method="post", name="login", id="login")
+	form.box(action="login", method="post", id="login")
 		img(src="assets/images/newme_logo.png")
 		fieldset#inputs
-			input#email(type="email", placeholder="E-mail address", autofocus, required)
-			input#password(type="password", placeholder="Password", required)
+			input#email(type="email", placeholder="E-mail address", name="email", autofocus, required)
+			input#password(type="password", placeholder="Password", name="password", required)
 		fieldset#actions
 			input#submit(type="submit",value="Log in")
 			p
