some set up for avatars

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,9 @@ html(lang='en')
 			title New Heart Game
 		link(rel="stylesheet", type="text/css", href="assets/stylesheets/style.css")
 	body
-		block content
-			p Hello, world!
+		.content
+			block content
+				p Hello, world!
 		#navigation_container
 			table#navigation
 				tr
