--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -6,10 +6,17 @@ html {
     background-size:cover;
 }
 
+body{
+    margin: 0px;
+}
+
 fieldset {
     border:0;
 }
 
+.content{
+    margin-bottom: 200px;
+}
 
 input[type=range]:before { content: attr(min); padding-right: 5px; }
 input[type=range]:after { content: attr(max); padding-left: 5px;}
@@ -150,7 +157,7 @@ label.stat.attribute {
 /*NAVIGATION*/
 #navigation_container {
     display: block;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     margin-bottom: 20px;
     left: 50%;
@@ -217,4 +224,23 @@ h2 {
     top: 25%;
     margin-left:auto;
     margin-right:auto;
+}
+
+
+/*AVATAR*/
+.avatar_title{
+    width:100%;
+    background:white;
+    height:5%;
+    text-align:center;
+    padding-top: 2%;
+    border-bottom: 1px solid gray;
+}
+
+.avatar_name{
+    background-color: rgba(255,255,255,0.5);
+    padding:5%;
+    border-radius:10px;
+    font-size:18pt;
+    margin-bottom:20px;
 }
