--- a/views/avatar.jade
+++ b/views/avatar.jade
@@ -17,6 +17,9 @@ html(lang='en')
 					$(".male_button").removeClass('selected');
 					$(".female_button").addClass('selected');
 				});
+				$(".selector_box .arrow_box_left").click(function(){
+					
+				});
 			});
 			function switchSelected(group){
 				return function(){
@@ -32,80 +35,80 @@ html(lang='en')
 			.avatar_selector
 				.avatar_description Skin Tone:
 				#skin.selector_box
-					.arrow_box
+					.arrow_box_left
 						img(src="assets/images/avatar/left_arrow.png")
 					.color_selector_box
 						.color_selector.selected(style="background:#{skin_colors[0]}")
 						.color_selector(style="background:#{skin_colors[1]}")
 						.color_selector(style="background:#{skin_colors[2]}")
 						.color_selector(style="background:#{skin_colors[3]}")
-					.arrow_box
+					.arrow_box_right
 						img(src="assets/images/avatar/right_arrow.png")
 				.avatar_description Hair Color:
 				#hair.selector_box
-					.arrow_box
+					.arrow_box_left
 						img(src="assets/images/avatar/left_arrow.png")
 					.color_selector_box
 						.color_selector.selected(style="background:#{hair_colors[0]}")
 						.color_selector(style="background:#{hair_colors[1]}")
 						.color_selector(style="background:#{hair_colors[2]}")
 						.color_selector(style="background:#{hair_colors[3]}")
-					.arrow_box
+					.arrow_box_right
 						img(src="assets/images/avatar/right_arrow.png")
 				.avatar_description Shirt Color:
 				#shirt.selector_box
-					.arrow_box
+					.arrow_box_left
 						img(src="assets/images/avatar/left_arrow.png")
 					.color_selector_box
 						.color_selector.selected(style="background:#{shirt_colors[0]}")
 						.color_selector(style="background:#{shirt_colors[1]}")
 						.color_selector(style="background:#{shirt_colors[2]}")
 						.color_selector(style="background:#{shirt_colors[3]}")
-					.arrow_box
+					.arrow_box_right
 						img(src="assets/images/avatar/right_arrow.png")
 				.avatar_description Pant Color:
 				#pant.selector_box
-					.arrow_box
+					.arrow_box_left
 						img(src="assets/images/avatar/left_arrow.png")
 					.color_selector_box
 						.color_selector.selected(style="background:#{pant_colors[0]}")
 						.color_selector(style="background:#{pant_colors[1]}")
 						.color_selector(style="background:#{pant_colors[2]}")
 						.color_selector(style="background:#{pant_colors[3]}")
-					.arrow_box
+					.arrow_box_right
 						img(src="assets/images/avatar/right_arrow.png")
 				.avatar_description Eye Color:
 				#eye.selector_box
-					.arrow_box
+					.arrow_box_left
 						img(src="assets/images/avatar/left_arrow.png")
 					.color_selector_box
 						.color_selector.selected(style="background:#{eye_colors[0]}")
 						.color_selector(style="background:#{eye_colors[1]}")
 						.color_selector(style="background:#{eye_colors[2]}")
 						.color_selector(style="background:#{eye_colors[3]}")
-					.arrow_box
+					.arrow_box_right
 						img(src="assets/images/avatar/right_arrow.png")
 				.avatar_description Hair Style:
 				#hair_style.selector_box
-					.arrow_box
+					.arrow_box_left
 						img(src="assets/images/avatar/left_arrow.png")
 					.color_selector_box
 						.color_selector.selected(style="background:url(#{hair_styles[0]});background-repeat: no-repeat;")
 						.color_selector(style="background:url(#{hair_styles[1]});background-repeat: no-repeat;")
 						.color_selector(style="background:url(#{hair_styles[2]});background-repeat: no-repeat;")
 						.color_selector(style="background:url(#{hair_styles[3]});background-repeat: no-repeat;")
-					.arrow_box
+					.arrow_box_right
 						img(src="assets/images/avatar/right_arrow.png")
 				.avatar_description Shoe Style:
 				#shoe_style.selector_box
-					.arrow_box
+					.arrow_box_left
 						img(src="assets/images/avatar/left_arrow.png")
 					.color_selector_box
 						.color_selector.selected(style="background:url(#{shoe_styles[0]});background-repeat: no-repeat;")
 						.color_selector(style="background:url(#{shoe_styles[1]});background-repeat: no-repeat;")
 						.color_selector(style="background:url(#{shoe_styles[2]});background-repeat: no-repeat;")
 						.color_selector(style="background:url(#{shoe_styles[3]});background-repeat: no-repeat;")
-					.arrow_box
+					.arrow_box_right
 						img(src="assets/images/avatar/right_arrow.png")
 			.avatar_diplay
 				.avatar_name
