added avatar saving

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -16,7 +16,7 @@ block content
 			tr
 				td
 					div
-						img(src="assets/images/avatar.png")
+						img(src="/avatars/#{url}")
 				td
 					label.stat Charisma:
 					label#charismaNum.stat.attribute
