--- a/views/avatar.jade
+++ b/views/avatar.jade
@@ -2,6 +2,7 @@ doctype
 html(lang='en')
 	head
 		title Avatar Creation
+		link(rel="stylesheet", type="text/css", href="assets/stylesheets/style.css")
 		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
 		script 
 			var selection = [0, 0, 0, 0, 0, 0, 0, 0];
@@ -14,13 +15,19 @@ html(lang='en')
 					$(".female_button").removeClass('selected');
 					$(".male_button").addClass('selected');
 					selection[7] = 1;
-					$("#avatar_image").attr('src', "/avatars/" + selection.join(""));
+					update_selection();
 				});
 				$(".female_button").click(function(){
 					$(".male_button").removeClass('selected');
 					$(".female_button").addClass('selected');
 					selection[7] = 0;
-					$("#avatar_image").attr('src', "/avatars/" + selection.join(""));
+					update_selection();
+				});
+				$('#save_avatar').click(function(){ 
+					var conf = confirm("Are you sure you finished creating your avatar?");
+					if(conf){
+						$('#avatar_form').submit();
+					}
 				});
 			});
 			function switch_selected(group, group_num){
@@ -28,12 +35,18 @@ html(lang='en')
 					$(group + " .color_selector").removeClass('selected');
 					$(this).addClass('selected');
 					selection[group_num] = $(this).attr('data-id');
-					$("#avatar_image").attr('src', "/avatars/" + selection.join(""));
+					update_selection();
 				};
 			}
-		link(rel="stylesheet", type="text/css", href="assets/stylesheets/style.css")
+			function update_selection(){
+				$("#avatar_url").val(selection.join(""));
+				$("#avatar_image").attr('src', "/avatars/" + selection.join(""));
+			}
 	body
 		.avatar_title
+			div(style="position:absolute; left:1%;")
+				a(href="#")
+					img#save_avatar(src="/assets/images/avatar/save.png")
 			h1 Create Your Avatar
 		div(style="margin:auto;padding-top:0.5%;")
 			.avatar_selector
@@ -75,3 +88,5 @@ html(lang='en')
 						| M
 					div(style="clear:both")
 				img#avatar_image(src='/avatars/00000000')
+				form#avatar_form(style="display:none", method="post", action="/avatar")
+					input#avatar_url(type="text", value="00000000", name="url")
