--- a/views/signup.jade
+++ b/views/signup.jade
@@ -12,7 +12,7 @@ block content
 		tr
 			td
 				div
-					img(src="assets/images/avatar.png")
+					img(src="/assets/images/avatar.png")
 			td
 				form(action="signup", method="post")
 					fieldset#inputs
