--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(lang='en')
 		block title
 			title New Heart Game
 		link(rel="stylesheet", type="text/css", href="/assets/stylesheets/style.css")
+		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
 	body
 		.content
 			block content
