--- a/views/map.jade
+++ b/views/map.jade
@@ -6,10 +6,20 @@ block title
 block content
 	h1 Map
 	#map.box
-		img(src='/assets/images/map/map.png',type='image/png',usemap='#map1')
-		map(name='map1')
-			area(href='/market',shape='rect',coords='0,332,224,536')
-			area(href='/park',shape='rect',coords='456,400,720,628')
-			area(href='/carnival',shape='rect',coords='648,217,800,366')
-			area(href='/house',shape='rect',coords='158,240,272,320')
-			area(href='/city',shape='rect',coords='453,222,616,314')
+		img(src='/assets/images/map/map.png',type='image/png',usemap='#map1', width='848px', height='656px')		
+		.ghostbox(style='left:320px;top:70px;width:370px;height:310px;')
+			a(href='/city')
+				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
+		.ghostbox(style='left:50px;top:350px;width:230px;height:210px;')
+			a(href='/market')
+				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
+		.ghostbox(style='left:475px;top:400px;width:350px;height:310px;')
+			a(href='/park')
+				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
+		.ghostbox(style='left:630px;top:230px;width:250px;height:250px;')
+			a(href='/carnival')
+				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
+		.ghostbox(style='left:190px;top:250px;width:140px;height:110px;')
+			a(href='/house')
+				img.hoverghost(src='/assets/images/map/heart.png',width='100%',height='100%')
+		
