--- a/views/profile.jade
+++ b/views/profile.jade
@@ -16,7 +16,8 @@ block content
 			tr
 				td
 					div
-						img(src="/avatars/#{url}")
+						a(href='/avatar')
+							img(src="/avatars/#{url}")
 				td
 					label.stat Charisma:
 					label#charismaNum.stat.attribute
