--- a/views/image_selector.jade
+++ b/views/image_selector.jade
@@ -1,9 +1,9 @@
 .arrow_box_left
 	img(src="assets/images/avatar/left_arrow.png")
 .color_selector_box
-	.color_selector.selected(style="background:url(#{group_array[0]});background-repeat: no-repeat;", data-id=0)
+	.color_selector.selected(style="background:url(#{group_array[0]});background-repeat: no-repeat;background-size: contain;", data-id=0)
 	- for (var i = 1; i < group_array.length;i++) {
-		.color_selector(style="background:url(#{group_array[i]});background-repeat: no-repeat;", data-id=i)
+		.color_selector(style="background:url(#{group_array[i]});background-repeat: no-repeat;background-size: contain", data-id=i)
 	- }
 .arrow_box_right
 	img(src="assets/images/avatar/right_arrow.png")
