--- a/views/login.jade
+++ b/views/login.jade
@@ -7,8 +7,19 @@ block content
 	form.box(action="login", method="post", id="login")
 		img(src="/assets/images/newme_logo.png")
 		fieldset#inputs
-			input#email(type="email", placeholder="E-mail address", name="email", autofocus, required)
-			input#password(type="password", placeholder="Password", name="password", required)
+			table
+				tr
+					td	
+						label(for='email')
+							| E-mail:
+					td
+						input#email(type="email", placeholder="E-mail address", name="email", autofocus, required)
+				tr
+					td
+						label(for='password')
+							| Password:
+					td
+						input#password(type="password", placeholder="Password", name="password", required)
 		fieldset#actions
 			input#submit(type="submit",value="Log in")
 			p
