--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -15,7 +15,7 @@ fieldset {
 }
 
 .content{
-    margin-bottom: 10%;
+    margin-bottom: 1%;
 }
 
 input[type=range]:before { content: attr(min); padding-right: 5px; }
@@ -49,14 +49,13 @@ input[type=range]:after { content: attr(max); padding-left: 5px;}
 
 /*LOGIN*/
 #login {
-    width: 300px;
-    height: 200px;
-    padding: 20px;
-    position: absolute;
-    margin-left: -180px;
-    margin-top: -150px;
-    left: 50%;
-    top: 35%;
+    width: 25%;
+    max-width: 393px;
+    height: auto;
+    padding: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
     z-index: 0;
 }
 
@@ -64,12 +63,9 @@ input[type=range]:after { content: attr(max); padding-left: 5px;}
 #signup {
     width: 700px;
     height: 400px;
-    padding: 25px;
-    position: absolute;
-    margin-left: -300px;
-    margin-top: -150px;
-    left: 50%;
-    top: 35%;
+    padding: 2%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #signup table {
@@ -111,42 +107,14 @@ label.stat.attribute {
 /*MAP*/
 #map {
     position: relative;
-    width: 70%;
+    width: 858px;
+    min-width: 858px;
+    min-height: 666px;
     z-index: 1;
-	padding: 25px;
+    padding: 20px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-}
-
-#map #arena {
-    position: absolute;
-    right: 20%;
-    top: 15%;
-}
-
-#map #city {
-    position: absolute;
-    left: 20%;
-    top: 15%
-}
-
-#map #forest {
-    position: absolute;
-    left: 15%;
-    bottom:15%;
-}
-
-#map #home {
-    position: absolute;
-    left: 45%;
-    top: 45%;
-}
-
-#map #school {
-    position: absolute;
-    right: 25%;
-    bottom: 15%;
 }
 
 .ghostbox{
@@ -164,22 +132,21 @@ label.stat.attribute {
 /*NAVIGATION*/
 #navigation_container {
     display: block;
-    position: fixed;
-    bottom: 0;
-    margin-bottom: 20px;
-    left: 50%;
+    position: relative;
+    width: 500px;
     z-index: 100;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #navigation {
-    position: relative;
     background: url('/assets/images/navbar/background.png') no-repeat center center;
     background-size: 100% auto;
     text-align: center;
     padding: 0px;
-    margin: 0px;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 100;
-    left: -50%;
 }
 
 
