--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,11 @@ html(lang='en')
 		block title
 			title New Heart Game
 		link(rel="stylesheet", type="text/css", href="/assets/stylesheets/style.css")
+		link(rel="stylesheet", type="text/css", href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css")
 		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
+		script(src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js")
+
+		block scripts
 	body
 		.content
 			block content
