--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -36,15 +36,12 @@ input[type=range]:after { content: attr(max); padding-left: 5px;}
 }
 
 #error {
-    width: 250px;
+    width: 350px;
     height: 200px;
-    padding: 20px;
-    position: absolute;
-    margin-left: -135px;
-    margin-top: -150px;
-    left: 50%;
-    top: 35%;
-    z-index: 0;
+    padding: 2%;
+    margin:2%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*LOGIN*/
